# heck-string-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  readme.sh  rust-toolchain.toml
src/: cli.rs  convert.rs  dispatch.rs  errors.rs  lib.rs  main.rs
